--- a/Restaurant Ordering System/public_html/Customer/customer_menu.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_menu.html
@@ -84,7 +84,7 @@
 
         menuGrid.innerHTML = data.items.map(item => `
           <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col border border-gray-200">
-            <img src="https://picsum.photos/300/200?random=${item.item_id}" alt="${item.item_name}" class="w-full h-36 object-cover">
+            <img src="/public_html/image/placeholder.jpg" alt="${item.item_name}" class="w-full h-36 object-cover">
             <div class="p-4 flex flex-col flex-grow">
               <h3 class="font-medium text-gray-900">${item.item_name}</h3>
               <p class="text-xs text-gray-600 flex-grow">${item.description || ''}</p>
